feat: implement user registration and login with JWT authentication
- Added user registration endpoint with password hashing and default subscription creation.
- Implemented user login endpoint with JWT generation.
- Created user profile retrieval endpoint with active subscriptions and API keys.
- Introduced API key management with creation and deletion functionalities.
- Integrated Prisma for database interactions and added necessary models and migrations.
- Enhanced error handling and response messages for better user experience.

chore: update dependencies and add Prisma client

- Updated package.json and package-lock.json to include @prisma/client and bcryptjs.
- Added database utility for Prisma client initialization.
- Created initial Prisma schema and migration files for database setup.

refactor: improve API key authentication and rate limiting

- Refactored API key authentication middleware to validate against the database.
- Implemented rate limiting based on user subscription tiers with database-backed tracking.
- Enhanced logging for API usage tracking and error handling.

style: format code and improve readability

- Cleaned up code formatting and improved variable naming for clarity.
- Organized imports and structured middleware for better maintainability.

--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
-  "keywords": ["weather", "api", "premium", "subscription", "meteorology"],
+  "keywords": [
+    "weather",
+    "api",
+    "premium",
+    "subscription",
+    "meteorology"
+  ],
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^6.10.1",
     "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -23,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
+    "prisma": "^6.10.1",
     "stripe": "^18.2.1",
     "uuid": "^10.0.0"
   },
