--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 node_modules
 
+# Environment variables
+.env
+.env.local
+.env.production
+.env.staging
+
+# Prisma
 /src/generated/prisma
+
+# Other
+.cache_ggshield
